--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="https://www.frontendmentor.io/profile/MaxTarasevich"
+          >@MaxTarasevich</a
+        >.
       </div>
     </main>
   </body>
